[package]
name = "inscribe_helper"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "To build signed inscribe transfer transactions"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin = { version = "0.30.0", features = ["rand"] }
ord = "0.8.0"
serde = "1.0.171"
serde_json = "1.0.102"
